err/distarkcli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/distarkcli'...
Listing './lib/python3.5/site-packages/distarkcli/protos'...
Listing './lib/python3.5/site-packages/distarkcli/protos/objects'...
Listing './lib/python3.5/site-packages/distarkcli/protos/services'...
Listing './lib/python3.5/site-packages/distarkcli/services'...
Listing './lib/python3.5/site-packages/distarkcli/transport'...
Compiling './lib/python3.5/site-packages/distarkcli/transport/distarkclient.py'...
***   File "./lib/python3.5/site-packages/distarkcli/transport/distarkclient.py", line 8
    print sys.path
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/distarkcli/transport/transportpool.py'...
***   File "./lib/python3.5/site-packages/distarkcli/transport/transportpool.py", line 134
    print 'Connection closed'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/distarkcli/utils'...
Compiling './lib/python3.5/site-packages/distarkcli/utils/MyConfiguration.py'...
***   File "./lib/python3.5/site-packages/distarkcli/utils/MyConfiguration.py", line 31
    print "Configuration Loaded from:", confpath
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/distarkcli/utils/PBUtils.py'...
***   File "./lib/python3.5/site-packages/distarkcli/utils/PBUtils.py", line 20
    print "OneRequest*****************"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/distarkcli/utils/zhelpers.py'...
***   File "./lib/python3.5/site-packages/distarkcli/utils/zhelpers.py", line 26
    print "----------------------------------------"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/distarkcli/utils/zoo.py'...
***   File "./lib/python3.5/site-packages/distarkcli/utils/zoo.py", line 87
    print 'Zookeeper session listner: LOST'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/distarkcli-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
